--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,16 @@
-beautifulsoup4==4.12.3
-certifi==2024.2.2
-charset-normalizer==3.3.2
-idna==3.6
-lyricsgenius==3.0.1
-requests==2.31.0
-soupsieve==2.5
-urllib3==2.2.1
+altgraph @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/altgraph-0.17.2-py2.py3-none-any.whl
+cffi==1.16.0
+future @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/future-0.18.2-py3-none-any.whl
+macholib @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/macholib-1.15.2-py2.py3-none-any.whl
+numpy==1.26.4
+pandas==2.2.2
+pdfCropMargins==2.0.3
+Pillow==10.0.0
+pycparser==2.21
+PyMuPDF==1.23.2
+PyMuPDFb==1.23.0
+PySimpleGUI==4.60.5
+python-dateutil==2.9.0.post0
+pytz==2024.1
+six @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/six-1.15.0-py2.py3-none-any.whl
+tzdata==2024.1
