--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,63 @@
-altgraph @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/altgraph-0.17.2-py2.py3-none-any.whl
-cffi==1.16.0
-future @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/future-0.18.2-py3-none-any.whl
-macholib @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/macholib-1.15.2-py2.py3-none-any.whl
+annotated-types==0.6.0
+anyio==4.3.0
+appnope==0.1.4
+asttokens==2.4.1
+backoff==2.2.1
+certifi==2024.2.2
+comm==0.2.2
+contourpy==1.2.1
+cycler==0.12.1
+debugpy==1.8.1
+decorator==5.1.1
+distro==1.9.0
+et-xmlfile==1.1.0
+executing==2.0.1
+fonttools==4.51.0
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+idna==3.7
+ipykernel==6.29.4
+ipython==8.23.0
+jedi==0.19.1
+jsons==1.6.3
+jupyter_client==8.6.1
+jupyter_core==5.7.2
+kiwisolver==1.4.5
+matplotlib==3.8.4
+matplotlib-inline==0.1.6
+nest-asyncio==1.6.0
 numpy==1.26.4
+openai==1.25.1
+openpyxl==3.1.2
+packaging==24.0
 pandas==2.2.2
-pdfCropMargins==2.0.3
-Pillow==10.0.0
-pycparser==2.21
-PyMuPDF==1.23.2
-PyMuPDFb==1.23.0
-PySimpleGUI==4.60.5
+parso==0.8.4
+patsy==0.5.6
+pexpect==4.9.0
+pillow==10.3.0
+platformdirs==4.2.0
+prompt-toolkit==3.0.43
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pydantic==2.7.1
+pydantic_core==2.18.2
+Pygments==2.17.2
+pyparsing==3.1.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.1
-six @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot7/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-133.100.1.1/six-1.15.0-py2.py3-none-any.whl
+pyzmq==25.1.2
+scipy==1.13.0
+six==1.16.0
+sniffio==1.3.1
+stack-data==0.6.3
+statsmodels==0.14.1
+tornado==6.4
+tqdm==4.66.3
+traitlets==5.14.2
+typing_extensions==4.11.0
+typish==1.9.3
 tzdata==2024.1
+wcwidth==0.2.13
